syntax = "proto3";
package modules.fundraising.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ignite/modules/x/fundraising/types";

// BaseAuction defines a base auction type. It contains all the necessary fields
// for basic auction functionality. Any custom auction type should extend this
// type for additional functionality (e.g. batch auction, fixed price
// auction).
message BaseAuction {
  option (gogoproto.goproto_getters) = false;

  option (cosmos_proto.implements_interface) = "AuctionI";

  // auctionID specifies index of the auction
  uint64 auctionID = 1;

  // type specifies the auction type
  // type 1 is fixed price and 2 is batch auction
  AuctionType type = 2;

  // auctioneer specifies the bech32-encoded address that creates the auction
  string auctioneer = 3;

  // sellingReserveAddress specifies the bech32-encoded address that has all
  // the selling coin
  string sellingReserveAddress = 4;

  // payingReserveAddress specifies the bech32-encoded address that has all
  // the paying coin
  string payingReserveAddress = 5;

  // startPrice specifies the starting price of the auction
  // it is determined by the proportion of the price of paying coin denom
  string startPrice = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];

  // sellingCoin specifies the selling coin for the auction
  cosmos.base.v1beta1.Coin sellingCoin = 7 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true,
    (amino.encoding) = "legacy_coins",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];

  // payingCoinDenom specifies the paying coin denom that bidders use to bid
  // for
  string payingCoinDenom = 8;

  // vestingReserveAddress specifies the bech32-encoded vesting address that
  // holds vesting amounts of coin
  string vestingReserveAddress = 9;

  // vestingSchedules specifies the vesting schedules for the auction
  repeated VestingSchedule vestingSchedules = 10 [(gogoproto.nullable) = false];

  // startTime specifies the start time of the plan
  google.protobuf.Timestamp startTime = 11 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // endTimes specifies the end time of the plan
  repeated google.protobuf.Timestamp endTimes = 12 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // status specifies the auction status
  AuctionStatus status = 13;
}

// FixedPriceAuction defines the fixed price auction type. It is the most
// simpliest way to raise funds. An auctioneer sets the starting price for each
// selling amounts of coin and bidders bid to purchase based on the fixed price.
message FixedPriceAuction {
  option (gogoproto.goproto_getters) = false;

  BaseAuction baseAuction = 1 [(gogoproto.embed) = true];

  // remainingSellingCoin specifies the remaining amount of selling coin to sell
  cosmos.base.v1beta1.Coin remainingSellingCoin = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}

// BatchAuction defines a batch auction type. It allows bidders to participate
// in the auction by placing their limit orders with a bid price they are
// willing to bid within the auction period. They can place multiple bids with
// different bid prices and if they want to modify their existing bid, they only
// have an option to modify with a higher bid price. Under the hood, an order
// book is created to record the bids to calculate the matched bidders.
message BatchAuction {
  option (gogoproto.goproto_getters) = false;

  BaseAuction baseAuction = 1 [(gogoproto.embed) = true];

  // minBidPrice specifies the minimum bid price
  string minBidPrice = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];

  // matchedPrice specifies the matched price of the auction
  string matchedPrice = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];

  // maxExtendedRound specifies a maximum number of extended rounds
  uint32 maxExtendedRound = 4;

  // extendedRoundRate specifies the rate that decides if the auction needs
  // another round
  string extendedRoundRate = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];
}

// AuctionType enumerates the valid types of an auction.
enum AuctionType {
  option (gogoproto.goproto_enum_prefix) = false;

  // AUCTION_TYPE_UNSPECIFIED defines the default auction type
  AUCTION_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AuctionTypeNil"];
  // AUCTION_TYPE_FIXED_PRICE defines the fixed price auction type
  AUCTION_TYPE_FIXED_PRICE = 1 [(gogoproto.enumvalue_customname) = "AuctionTypeFixedPrice"];
  // AUCTION_TYPE_BATCH defines the batch auction type
  AUCTION_TYPE_BATCH = 2 [(gogoproto.enumvalue_customname) = "AuctionTypeBatch"];
}

// AuctionStatus enumerates the valid status of an auction.
enum AuctionStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // AUCTION_STATUS_UNSPECIFIED defines the default auction status
  AUCTION_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AuctionStatusNil"];
  // AUCTION_STATUS_STANDBY defines the standby auction status
  AUCTION_STATUS_STANDBY = 1 [(gogoproto.enumvalue_customname) = "AuctionStatusStandBy"];
  // AUCTION_STATUS_STARTED defines the started auction status
  AUCTION_STATUS_STARTED = 2 [(gogoproto.enumvalue_customname) = "AuctionStatusStarted"];
  // AUCTION_STATUS_VESTING defines the vesting auction status
  AUCTION_STATUS_VESTING = 3 [(gogoproto.enumvalue_customname) = "AuctionStatusVesting"];
  // AUCTION_STATUS_FINISHED defines the finished auction status
  AUCTION_STATUS_FINISHED = 4 [(gogoproto.enumvalue_customname) = "AuctionStatusFinished"];
  // AUCTION_STATUS_CANCELLED defines the cancelled auction status
  AUCTION_STATUS_CANCELLED = 5 [(gogoproto.enumvalue_customname) = "AuctionStatusCancelled"];
}

// VestingSchedule defines the vesting schedule for the owner of an auction.
message VestingSchedule {
  // releaseTime specifies the time for distribution of the vesting coin
  google.protobuf.Timestamp releaseTime = 1 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false
  ];

  // weight specifies the vesting weight for the schedule
  string weight = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (cosmos_proto.scalar) = "cosmos.Dec"
  ];
}
